--- a/L-1-T-1-Porfolio/styles.css
+++ b/L-1-T-1-Porfolio/styles.css
@@ -23,6 +23,7 @@ a, button {
   font-family: "Poppins", sans-serif;
   padding-left: 20px;
   padding-right: 20px;
+  border-bottom: 1px solid gray;
 }
 
 .name {
@@ -104,4 +105,24 @@ a:hover {
 
 .parent:hover > .sub-menu {
   display: flex;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+  margin-top: 200px;
+}
+
+.profile-pic-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-pic {
+  height: 300px;
+  border-radius: 100px;
+  border: 1px solid black;
 }
