--- a/L-1-T-1-Porfolio/styles.css
+++ b/L-1-T-1-Porfolio/styles.css
@@ -8,6 +8,12 @@ a, button {
   transition: all 300ms ease;
 }
 
+body {
+  font-family: Poppins, sans-serif;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .header {
   position: fixed;
   left: 0;
@@ -21,6 +27,7 @@ a, button {
 
   color: black;
   font-family: "Poppins", sans-serif;
+  background-color: white;
   padding-left: 20px;
   padding-right: 20px;
   border-bottom: 1px solid gray;
@@ -29,6 +36,7 @@ a, button {
 .name {
   font-size: 34px;
   text-align: center;
+  cursor: pointer;
 }
 
 @media (max-width:480px) {
@@ -36,6 +44,10 @@ a, button {
     font-size: 28px;
   }
   
+}
+
+.name-link:hover {
+  text-decoration: none;
 }
 
 .links {
@@ -111,8 +123,10 @@ a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 100px;
+  gap: 50px;
+
   margin-top: 200px;
+  flex-wrap: wrap;
 }
 
 .profile-pic-container {
@@ -123,6 +137,160 @@ a:hover {
 
 .profile-pic {
   height: 300px;
-  border-radius: 100px;
-  border: 1px solid black;
+  border-radius: 50%;
+  border: 3px solid black;
+}
+
+.profile-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  align-items: center;
+  line-height: 10px;
+}
+
+.line-1 {
+  font-size: 20px;
+}
+
+.line-2 {
+  font-size: 34px;
+  text-wrap: nowrap;
+}
+
+@media (max-width: 320px) {
+  .line-1 {
+    font-size: 14px;
+  }
+
+  .line-2 {
+    font-size: 18px;
+  }
+
+  .overview-button {
+    font-size: 12px;
+    padding: 8px 10px;
+  }
+}
+
+@media (max-width:600px) {
+  .line-2 {
+    font-size: 18px;
+  }
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  gap: 20px;
+  margin-top: 20px;
+  flex-wrap: wrap;
+}
+
+.overview-button {
+  font-size: 14px;
+  border: 2px solid black;
+  color: black;
+  background-color: white;
+  padding: 10px 14px;
+  border-radius: 30px;
+  font-weight: 700;
+}
+
+.overview-link:hover {
+  text-decoration: none;
+}
+
+.overview-button:hover {
+  color: white;
+  background-color: black;
+
+  .overview-link {
+    color: white;
+  }
+}
+
+.heading {
+  font-size: 24px;
+  margin-top: 280px;
+  margin-bottom: 50px;
+  text-align: center;
+  line-height: 8px;
+  text-wrap: nowrap;
+}
+
+@media (max-width: 400px) {
+  .heading {
+    font-size: 20px;
+  }
+}
+
+#about,#skills,#projects,#contact {
+  padding-top: 5px;
+}
+
+.about-education {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+
+  border: 2px solid gray;
+  border-radius: 30px;
+  padding: 20px;
+  flex: 1;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-image {
+  height: 50px;
+}
+
+.about-description {
+  flex: 2;
+}
+
+@media (max-width: 850px) {
+  .about-container {
+    flex-direction: column;
+    gap: 25px;
+  }
+}
+
+.parent-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  flex-wrap: wrap;
+}
+
+.container {
+  border: 2px solid gray;
+  border-radius: 32px;
+  padding: 24px;
+  flex: 1;
+  text-align: center;
+}
+
+.line {
+  background-color: gray;
+  height: 2px;
+  width: auto;
+}
+
+.icon {
+  height: 24px;
+}
+
+#contact {
+  margin-bottom: 200px;
 }
